# dfisan

./: .gitignore  Implementation.md  README.md  Support.md
SVF/: CMakeLists.txt
SVF/lib/: CMakeLists.txt
SVF/lib/CUDD/: CMakeLists.txt
SVF/lib/SVF-FE/: BreakConstantExpr.cpp
SVF/lib/Util/: ExtAPI.cpp
clang/include/clang/AST/: EnforcedAlign.h
clang/include/clang/Basic/: LangOptions.h  Sanitizers.def
clang/include/clang/Driver/: Options.td  SanitizerArgs.h
clang/lib/AST/: CMakeLists.txt  EnforcedAlign.cpp
clang/lib/CodeGen/: BackendUtil.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  Dfisan.cpp  Dfisan.h  Linux.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Sema/: SemaDecl.cpp
clang/runtime/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/lib/dfisan/: CMakeLists.txt  dfisan.cpp  dfisan.syms.extra  dfisan_check.cpp  dfisan_errors.cpp  dfisan_errors.h  dfisan_interceptors.cpp  dfisan_interceptors.h  dfisan_interface_internal.h  dfisan_internal.h  dfisan_malloc.cpp  dfisan_malloc.h  dfisan_mapping.h  dfisan_rtl.cpp  dfisan_shadow_setup.cpp
compiler-rt/lib/dfisan/dlmalloc/: dlmalloc.c  dlmalloc.h  dlmalloc_config.h
compiler-rt/lib/sanitizer_common/: sanitizer_platform_limits_posix.cpp
compiler-rt/test/dfisan/: CMakeLists.txt  README.md  array_in_global_init.c  array_in_struct_init.c  char_struct_overflow.c  global_struct_init.c  heap_overread.c  heap_struct_overflow.c  heap_struct_overread.c  lit.cfg.py  lit.site.cfg.py.in  local_overflow.c  local_overread.c  local_struct_overflow.c  local_struct_overread.c  malloc_free.c  safe_alloc.h  short_struct_overflow.c  static_local_vars.c  struct_in_array_init.c  uninitialized_global_vars.c
compiler-rt/test/dfisan/AttackDetection/: access_safe_region.c  char_struct_overflow.c  heap_struct_overflow.c  heap_struct_overread.c  local_overflow.c  local_struct_overflow.c  local_struct_overread.c  overflow_in_call.c  short_struct_overflow.c  struct_in_arr_overflow.c  struct_in_arr_overflow2.c  struct_in_arr_overread1.c  struct_in_arr_overread2.c  struct_nest_overflow1.c  struct_nest_overflow2.c  struct_nest_overflow3.c  struct_nest_overread1.c  struct_nest_overread2.c  struct_nest_overread3.c  subobject_overflow_in_arg.c
compiler-rt/test/dfisan/BugDetection/: heap_overflow.c  heap_overread.c  local_overread.c  short_struct_overflow.c
compiler-rt/test/dfisan/DataRace/: apache-25520.c  apache-46215.c  assoc_array_vuln.c  global_arr_access.c  global_write_read_race.c  global_write_read_race_free.c  libsafe_vuln.c  local_write_read_race.c  local_write_read_race_free.c  multi-forked-threads.c  no_race_condition_access.c  no_race_struct_access.c  nullptr_deref.c  same_func_threads.c  same_thread_access.c  ssdb_vuln.c  test.h
compiler-rt/test/dfisan/DefUseAnalysis/: aligned_def_use.c  aligned_only.c  both_def_use.c  both_thread.c  rename_optimization.c  unaligned_def_use.c  unaligned_only.c
compiler-rt/test/dfisan/MotivatingExamples/: data-race.c  no-err.c  subobject-overflow.c  test.h
compiler-rt/test/dfisan/NoSupport/: argv_support.c  arr_args.c  arr_ptr_arg_in_struct.c  array_copy.c  array_in_global_init.c  array_in_struct_init.c  byval_support.c  calloc_support.c  char_struct_memcpy.c  char_struct_overflow.c  global_pointer.c  global_pointer_init.c  global_struct_init.c  global_struct_side_effect.c  heap_overflow.c  heap_overread.c  heap_struct_overflow.c  heap_struct_overread.c  local_overflow.c  local_overread.c  local_struct_overflow.c  local_struct_overread.c  malloc_wrapper.c  memcpy_by_pointer.c  memset.c  multiple_array.c  ptr_calloc.c  return_struct.c  return_struct_with_cast.c  short_struct_overflow.c  static_local_vars.c  struct_cast_in_args.c  struct_copy.c  struct_in_array_init.c  struct_ptr_args.c  uninitialized_global_vars.c
compiler-rt/test/dfisan/ReplaceWithSafeAlloc/: annotations.c  check_four_byte_aligned.c  runtime_info.h  safe_alloc_support.c  struct_alignment_support.c  unaligned_region_only.c
compiler-rt/test/dfisan/Support/: array_copy.c  array_in_global_init.c  array_in_struct_init.c  array_init.c  attribute.c  byval_support.c  calloc_support.c  cast.c  char_args.c  char_struct_memcpy.c  union.c  (+18 more)
linker/: linker_script.lds
llvm/: CMakeLists.txt
llvm/lib/Analysis/: CMakeLists.txt
llvm/lib/Analysis/SVF/: CMakeLists.txt  FieldSensitivePTA.cpp  SparseValueFlowGraph.cpp  UseDefAnalysis.cpp  config.in
llvm/lib/Analysis/SVF/CUDD/: CMakeLists.txt
llvm/lib/Analysis/SVF/Dfisan/: DefUseLogger.cpp  DefUseSolver.cpp  DfisanExtAPI.cpp  DfisanMTA.cpp  DfisanMemSSA.cpp  DfisanSVFG.cpp  DfisanSVFGBuilder.cpp  DfisanSVFIRBuilder.cpp
llvm/lib/Analysis/SVF/MTA/: MHP.cpp  MTA.cpp
llvm/lib/Analysis/SVF/ModulePass/: ProtectionTargetAnalysisPass.cpp  SVFDefUseAnalysisPass.cpp
llvm/lib/Analysis/SVF/SVF-FE/: BreakConstantExpr.cpp
llvm/lib/Analysis/SVF/UseDefAnalysis/: UseDefAnalysis.cpp  UseDefAnalysisPass.cpp  UseDefChain.cpp  UseDefLogger.cpp  UseDefSVFGBuilder.cpp  UseDefSVFIRBuilder.cpp  UseDefUtils.cpp
llvm/lib/Analysis/SVF/Util/: Options.cpp
llvm/lib/Analysis/dg/: CMakeLists.txt
llvm/lib/Analysis/dg/Passes/: DfiDataDependenceAnalysis.cpp  DfiDefUse.cpp  DfiDefUse.h  DfiLLVMDataDependenceAnalysis.cpp  DfiLLVMDependenceGraph.cpp  DfiMemorySSA.cpp  DfiReadWriteGraphBuilder.cpp  DfiReadWriteGraphBuilder.h  DfiUtils.cpp  ProtectionTargetAnalysisPass.cpp  UseDefAnalysisPass.cpp  UseDefBuilder.cpp  UseDefLogger.cpp
llvm/lib/Analysis/dg/llvm/: GraphBuilder.h
llvm/lib/Analysis/dg/llvm/DataDependenceAnalysis/: LLVMDataDependenceAnalysis.cpp
llvm/lib/Analysis/dg/llvm/DefUse/: DefUse.h
llvm/lib/Analysis/dg/llvm/ReadWriteGraph/: Calls.cpp  Instructions.cpp  LLVMReadWriteGraphBuilder.h
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
llvm/lib/Support/: Debug.cpp
llvm/unittests/Analysis/: CMakeLists.txt  FieldSensitivePTATest.cpp  ProtectionTargetAnalysisTest.cpp  SparseValueFlowGraphTest.cpp  UseDefAnalysisTest.cpp
sqlite3/: CMakeLists.txt
sqlite3/lib/: CMakeLists.txt
(+99 files in other folders)
